feat : Add a route to delete a user client
Closes #13, #15
