# src/Controller/SmartPhonesController.php
@@ -4,18 +4,19 @@ namespace App\Controller;
 
 use App\Entity\SmartPhone;
 use App\Exceptions\ResourceNotFoundException;
-use FOS\RestBundle\Controller\AbstractFOSRestController;
 use FOS\RestBundle\Controller\Annotations as Rest;
 use OpenApi\Annotations as OA;
 use OpenApi\Annotations\JsonContent;
 use Nelmio\ApiDocBundle\Annotation\Model;
 use Nelmio\ApiDocBundle\Annotation\Security;
 use Sensio\Bundle\FrameworkExtraBundle\Configuration\IsGranted;
-
 /**
  * @IsGranted("IS_AUTHENTICATED_FULLY")
+ * 
+ * @OA\Response (response="401", ref="#/components/responses/Unauthorized")
+ * 
  */
-class SmartPhonesController extends AbstractFOSRestController
+class SmartPhonesController extends MyAbstractController
 {
     /**
      * @Rest\Get("/phones", name="phones_list")
@@ -43,9 +44,8 @@ class SmartPhonesController extends AbstractFOSRestController
      *          response="200",
      *          description="Our smartphones",
      *          @OA\JsonContent(type="array", @OA\Items(ref=@Model(type=SmartPhone::class, groups={"list"})))
-     *      )
+     *      ),
      * )
-     * 
      * @Security(name="bearerAuth")
      */
     public function list($brand, $price)
@@ -75,7 +75,7 @@ class SmartPhonesController extends AbstractFOSRestController
      *          @OA\Schema(type="integer")
      *      ),
      *      @OA\Response(
-     *          response=200,
+     *          response="200",
      *          description="Returns phone details",
      *          @OA\JsonContent(ref=@Model(type=SmartPhone::class, groups={"details"}))
      *      ),
